# cuy

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml  shell.nix
.cargo/: config.toml
a64/: Cargo.toml
m/: Cargo.toml
testing/: Cargo.toml  README.md
testing/src/: lib.rs
testing/tests/: a64.rs  m.rs
tests/: Cargo.toml
