[workspace]
members = ["packages/*"]
resolver = "3"

[workspace.dependencies]
sh.path = "../any/packages/sh"

[workspace.package]
license = "MIT OR Apache-2.0"
publish = false

[profile.dev]
codegen-units = 1
lto = 'fat'
opt-level = 'z'

[profile.release]
codegen-units = 1
debug = true
lto = 'fat'
opt-level = 'z'
